Fixed python website double scroller and improve UX (#18845)
* make python site header scroll aware and avoid double scroller

* add compiled assets

* adjust python site second header height

* add new line

* set focus to main content on DOM load

--- a/docs/python_docs/_static/mxnet.css
+++ b/docs/python_docs/_static/mxnet.css
@@ -49,7 +49,7 @@
 }
 
 .mdl-layout__header-row {
-    height: 84px !important;
+    height: 80px !important;
 }
 
 .mdl-shadow--2dp {
@@ -199,4 +199,8 @@ p {
     float: right;
     margin: 4px;
     cursor: pointer;
+}
+
+.scrollUp {
+    transform: translateY(-80px);
 }
